# oda-client

./: .gitignore  Makefile  README.md  context.yaml  default-graphs.py  odaw.py  requirements.txt  service_exception.py  setup.cfg  setup.py  workflows.py
oda/: __init__.py  cli.py  evaluate.py  evaluator.py  exceptions.py  graph.py  logs.py  logstash.py  sentry.py
tests/: test_rdf.py  test_routing.py
workflows/: logs.py  logstash.py  sentry.py  todestrieb.py
