[bumpversion]
current_version = 1.3.35

[bumpversion:file:VERSION]

[bumpversion:file:setup.py]

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[coverage:run]
source = oda_evaluate
omit = oda_evaluate/tests/*
parallel = True
concurrency = 
	thread

[metadata]
name = oda-client
license = GPL-2+
license_file = COPYING
author = Volodymyr Savchenko
author_email = contact@volodymyrsavchenko.com
url = https://odahub.io
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires = 
	lxml
	six
	coloredlogs
	click
	click-aliases
tests_require = 
	pytest

[options.entry_points]
console_scripts = 
	oda = oda.cli:oda
	ew = oda.router:evaluate_console

[options.package_data]
oda_evaluate.tests.data = *.xml
